# ops-agent

./: .gitignore  CLAUDE.md  README.md  README.zh.md  package-lock.json  package.json  pyrightconfig.json  requirements.txt  run.sh  run_tests_windows.bat  skills-lock.json
.agents/skills/ops-browser-verification/: SKILL.md
.agents/skills/ops-frontend-guidelines/: SKILL.md
.agents/skills/ops-ui-design/: SKILL.md
.github/workflows/: desktop-release.yml
database/: schema.sql
docs/: workflow.md
docs/plans/: 2026-05-07-session-removal-design.md
script/: package.ps1  package.py  package.sh
scripts/: build_backend_binary.py  build_desktop_bundle.sh  run.bat  run.sh  start_backend_dev.sh
src/app/: api.py  main.py
src/app/api/: __init__.py  approval.py  assets.py  chat.py  (+13 more)
tests/: test_agent_runtime.py  test_api.py  test_approval_service.py  test_asset_service.py  test_assistant_session_service.py  test_chat_runtime_flow.py  test_chat_service.py  test_command_catalog.py  test_credential_service.py  test_history_service.py  test_message_service.py  test_mock_provider.py  test_model_service.py  test_planner.py  test_safety_guard.py  test_shared_schemas.py  test_task_service.py  test_terminal_service.py  test_ui_flow.py
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/src/: App.tsx  api.ts  desktop.ts  index.css  main.tsx  mock_api.ts  styles.css  vite-env.d.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
(+240 files in other folders)
